--- a/Einleitung.tex
+++ b/Einleitung.tex
@@ -1,2 +1,4 @@
 \section{Einleitung}
 
+Die thermoelektrischen Effekte sind in allen Bereichen des Lebens wiederzufinden – in der Wissenschaft, der Technik und dem alltäglichen Leben. Auf ihnen basieren die Möglichkeiten, sehr genau computergestützt Temperaturen zu messen oder feine Temperaturunterschiede einzustellen. In diesem Versuch wird besonders darauf eingegangen, den Seebeck-Koeffizienten des Thermoelements und den Peltier-Koeffizienten des Peltier-Elements zu ermitteln. 
+Der Versuch ist im Bereich der Wärmelehre anzusiedeln und benötigt somit Thermometer und Multimeter als Messgeräte. Beim thermoelektrischen Effekt wird der Zusammenhang zwischen einer Temperaturdifferenz in zwei Leitern oder auch Halbleitern und der Spannung zwischen diesen beiden Leitern hergestellt. Beim Peltier-Effekt hingegen wird mithilfe eines Stromflusses eine Temperaturdifferenz erzeugt.
