--- a/Versuchsbeschreibung.tex
+++ b/Versuchsbeschreibung.tex
@@ -2,17 +2,40 @@
 
 \subsection{Versuchsaufbau}
 
-\subsubsection{Teil 1}
+\subsubsection{Seebeck-Koeffizient}
+\begin{figure}[H]
+    \centering
+    \includegraphics[scale = 0.2]{Bilder/Aufbau Teil 1.jpg}
+    \caption{Eine selbst angefertigte Skizze zum Aufbau des ersten Experiments: zu sehen ist das Becherglas auf der Herdplatte, das eisgekühlte Wasser und das Thermoelement mit dem Voltmeter.}
+    \label{Aufbau1}
+\end{figure}
 
-\subsubsection{Teil 2}
+Für den Aufbau des ersten Experiments werden ein isoliertes Gefäß benötigt, welches mit Eis und Wasser gefüllt ist. Zusätzlich wird ein zweites Gefäß benötigt, welches mit destilliertem Wasser gefüllt ist und erhitzt werden kann, zum Beispiel mithilfe eines Kochtopfes. Nun werden zwei Leiter benötigt, wobei jeweils die Enden beider Leiter verbunden werden und der eine nun in der Mitte aufgetrennt wird. Der in der Mitte aufgetrennte Leiter wird nun jeweils mit einem Voltmeter verbunden, somit sollte der Aufbau wie in der Skizze aussehen.
 
-\subsubsection{Teil 3}
+\subsubsection{Peltier-Koeffizient}
+\begin{figure}[H]
+    \centering
+    \includegraphics[scale = 0.2]{Bilder/Aufbau Teil 2.jpg}
+    \caption{Eine selbst angefertigte Skizze zum Aufbau des zweiten Experiments: zu sehen ist das eisgekühlte Wasser, das Thermoelement mit dem Voltmeter, das Netzteil für das Peltier-Element und das isolierte Peltier-Element mit der angeschlossenen Wasserkühlung und allen Messstellen.}
+    \label{Aufbau2}
+\end{figure}
+
+Im zweiten Teil des Experiments wird nun das Wasserreservoir aus Teil 1 des Experiments, welches erhitzt wird, gegen das Peltier-Element ausgetauscht. Damit das Peltier-Element auch funktioniert, wird noch ein Netzteil benötigt, um das Peltier-Element betreiben zu können. Hierbei ist wichtig zu beachten, dass das Peltier-Element richtig angeschlossen wird, da sonst der Kühl- und Heizeffekt vertauscht werden. Um nun aber auch zu gewährleisten, dass der Kühleffekt effektiv angewendet wird, muss die Wärmeenergie, die an der warmen Seite anfällt, abgeführt werden. Hierfür wird eine Wasserkühlung verwendet.
+
+\subsubsection{Seebeck-Koeffizient für das Peltier-Element}
+
+Im dritten Teil des Experiments wird der Versuchsaufbau vom zweiten Teil ein weiteres Mal verwendet, nur wird nun ein weiteres Voltmeter eingebaut, welches die Spannung am Peltier-Element messen wird.
+\newpage
 
 \subsection{Versuchsdurchführung}
 
-\subsubsection{Teil 1}
+\subsubsection{Seebeck-Koeffizient}
+In diesem Teil der Durchführung wird der erste Versuchsaufbau verwendet. Im ersten Schritt wird die Temperatur im Gefäß auf der Kochplatte gemessen und zusätzlich die Spannung am Thermoelement. Diese Messdaten werden immer aufgenommen, wenn die Spannung sich um 0,05 mV ändert. Die Temperaturdifferenz $\Delta T$ am Ende des Experiments sollte ungefähr 75 °C betragen.
 
-\subsubsection{Teil 2}
+\subsubsection{Peltier-Koeffizient}
+Bei dieser Versuchsdurchführung wird der Versuchsaufbau des Peltier-Koeffizienten benötigt. Bei dieser Durchführung wird nun das Netzgerät eingeschaltet und immer in 0,8-Ampere-Schritten höher gestellt. Dieses Hochstellen der Stromstärke findet immer dann statt, wenn sich für etwas längere Zeit ein stationärer Zustand zwischen der Temperatur an der warmen Seite des Peltier-Elements und der kalten Seite, die wieder mithilfe des Thermoelements gemessen wird, eingestellt hat. Dieser stationäre Zustand wird ein paar Messungen gehalten und danach wird erst die Stromstärke erhöht. Der Abstand zwischen zwei Messungen soll 20 bis 30 Sekunden betragen. Bei dieser Messreihe werden die Daten der Thermospannung, der Temperatur und der Stromstärke benötigt.
 
-\subsubsection{Teil 3}
+\subsubsection{Seebeck-Koeffizient für das Peltier-Element}
+Bei dieser Durchführung wird nun ein Voltmeter am Netzteil angeschlossen, da das Netzteil im Verlauf der Durchführung ausgeschaltet wird. Im ersten Schritt wird die niedrigste Temperatur des Peltier-Elements eingestellt und gewartet, bis diese erreicht wurde. Sobald diese erreicht ist, wird das Netzteil ausgeschaltet. Ab jetzt wird wieder im 0,05-mV-Abstand am Thermoelement die Temperatur am Peltier-Element, die Spannung am Netzteil und die Spannung am Thermoelement gemessen.
+
 
