--- a/literatur.bib
+++ b/literatur.bib
@@ -5,3 +5,8 @@
   title = {Physik für Wissenschaftler und Ingenieure},
   year = {2019}
 }
+
+@manual{W9,
+  author = {Universität Augsburg},
+  title = {W9 Thermoelektrischen Effekte}
+}
